--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -56,23 +56,23 @@ services:
     networks:
       - inception
 
-  ftp:
-    build: ./requirements/bonus/FTP
-    container_name: ftp
-    restart: always
-    ports:
-      - "21:21"
-    networks:
-      - inception
+  # ftp:
+  #   build: ./requirements/bonus/FTP
+  #   container_name: ftp
+  #   restart: always
+  #   ports:
+  #     - "21:21"
+  #   networks:
+  #     - inception
 
-  website:
-    build: ./requirements/bonus/WebSites
-    container_name: website
-    restart: always
-    ports:
-      - "8000:80"
-    networks:
-      - inception
+  # website:
+  #   build: ./requirements/bonus/WebSites
+  #   container_name: website
+  #   restart: always
+  #   ports:
+  #     - "8000:80"
+  #   networks:
+  #     - inception
 
 volumes:
   mariadb_data:
