--- a/srcs/.env
+++ b/srcs/.env
@@ -1,1 +1,15 @@
-DOMAIN_NAME=souaammo.42.fr
+WORDPRESS_DOMAIN=souaammo.42.fr
+
+MYSQL_ROOT_PASSWORD=1337
+WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_USER=samir
+WORDPRESS_DB_PASSWORD=1337
+WORDPRESS_DB_HOST=mariadb
+
+WORDPRESS_ADMIN_USER=samir
+WORDPRESS_ADMIN_PASSWORD=1337
+WORDPRESS_ADMIN_EMAIL=admin@souaammo.42.fr
+
+WORDPRESS_USER=samir
+WORDPRESS_USER_PASSWORD=1337
+WORDPRESS_USER_EMAIL=client@souaammo.42.fr
