--- a/srcs/.env
+++ b/srcs/.env
@@ -1,15 +1,38 @@
-WORDPRESS_DOMAIN=souaammo.42.fr
+# ------------------------
+# Nginx
+# ------------------------
+DOMAIN_NAME=souaammo.42.fr
+NGINX_HOST=localhost
+NGINX_PORT=443
+SSL_CERT_PATH=/etc/nginx/ssl/inception.crt
+SSL_KEY_PATH=/etc/nginx/ssl/inception.key
 
+# ------------------------
+# MariaDB
+# ------------------------
 MYSQL_ROOT_PASSWORD=1337
-WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_USER=samir
+MYSQL_DATABASE=wordpress
+MYSQL_USER=souaammo
+MYSQL_PASSWORD=1337
+
+# ------------------------
+# WordPress Admin
+# ------------------------
+WP_ADMIN_USER=samir
+WP_ADMIN_PASSWORD=1337
+WP_ADMIN_EMAIL=samir@gmail.com
+
+# ------------------------
+# WordPress Regular User
+# ------------------------
+WP_USER=souaammo
+WP_USER_PASSWORD=1337
+WP_USER_EMAIL=souaammo@gmail.com
+
+# ------------------------
+# WordPress DB Connection
+# ------------------------
+WORDPRESS_DB_HOST=mariadb:3306
+WORDPRESS_DB_USER=souaammo
 WORDPRESS_DB_PASSWORD=1337
-WORDPRESS_DB_HOST=mariadb
-
-WORDPRESS_ADMIN_USER=samir
-WORDPRESS_ADMIN_PASSWORD=1337
-WORDPRESS_ADMIN_EMAIL=admin@souaammo.42.fr
-
-WORDPRESS_USER=samir
-WORDPRESS_USER_PASSWORD=1337
-WORDPRESS_USER_EMAIL=client@souaammo.42.fr
+WORDPRESS_DB_NAME=wordpress
