--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,22 +1,12 @@
-FROM debian:trixie-backports
+FROM debian:bullseye
 
-RUN apt update && apt install -y \
-    php8.4-fpm \
-    php8.4-mysqli \
-    wget \
-    curl \
-    unzip \
-    ca-certificates \
-    default-mysql-client \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update -y && \
+ 	apt-get install vim -y && \
+	apt-get install wget -y && \
+	apt-get install -y php7.4 php7.4-fpm php-mysql
 
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-    && chmod +x wp-cli.phar \
-    && mv wp-cli.phar /usr/local/bin/wp
+COPY tools/script.sh /
 
-COPY tools/entrypoint.sh /entrypoint.sh
-COPY conf/wp-config.php /wp-config.php
+RUN chmod +x /script.sh
 
-RUN chmod +x /entrypoint.sh
-
-CMD ["/entrypoint.sh"]
+CMD ["/script.sh"]
