--- a/srcs/.env
+++ b/srcs/.env
@@ -36,3 +36,35 @@ WORDPRESS_DB_HOST=mariadb:3306
 WORDPRESS_DB_USER=souaammo
 WORDPRESS_DB_PASSWORD=1337
 WORDPRESS_DB_NAME=wordpress
+
+# ------------------------
+# Redis
+# ------------------------
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# ------------------------
+# FTP
+# ------------------------
+FTP_USER=samir
+FTP_PASSWORD=1337
+FTP_HOME=/var/ftp/wordpress
+FTP_PORT=21
+
+# ------------------------
+# Adminer
+# ------------------------
+ADMINER_PORT=8081
+
+# ------------------------
+# Static Website
+# ------------------------
+STATIC_SITE_PORT=8080
+
+# ------------------------
+# Optional Service / my_website
+# ------------------------
+MY_WEBSITE_PORT=1337
+
+
+# mariyadb, wordpress, nginx, adminer, ftp, redis, service, website
