--- a/srcs/.env
+++ b/srcs/.env
@@ -54,14 +54,14 @@ FTP_PORT=21
 # ------------------------
 # Adminer
 # ------------------------
-ADMINER_PORT=8081
+ADMINER_PORT=8080
 
 # ------------------------
 # Static Website
 # ------------------------
-STATIC_SITE_PORT=8080
+STATIC_SITE_PORT=4242
 
 # ------------------------
-# Optional Service / my_website
+# Optional Service
 # ------------------------
-MY_WEBSITE_PORT=1337
+WEB_SERVICE=1337
