--- a/srcs/requirements/bonus/static-website/Dockerfile
+++ b/srcs/requirements/bonus/static-website/Dockerfile
@@ -1,9 +1,9 @@
-FROM debian:bookworm
+FROM debian:trixie-backports
 
 RUN apt-get update -y && apt-get install -y nginx
 
 COPY index.html /var/www/html/index.html
 
-EXPOSE 1337
+EXPOSE 4242
 
 CMD ["nginx", "-g", "daemon off;"]
