--- a/srcs/requirements/bonus/web_service/tools/website/Inception/srcs/docker-compose.yml
+++ b/srcs/requirements/bonus/web_service/tools/website/Inception/srcs/docker-compose.yml
@@ -125,7 +125,7 @@ services:
     networks:
       - inception
     ports:
-      - "${WEB_SERVICE}:${WEB_SERVICE}"
+      - "${WEB_SERVICE}:80"
     restart: unless-stopped
 
 volumes:
