Finish FTP (File Transfer Protocol) container

--- a/srcs/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp/conf/vsftpd.conf
@@ -1,7 +1,20 @@
 listen=YES
+# Enable standalone mode so FTP server listens on port 21
+
 anonymous_enable=NO
+# Disable anonymous login; only local users can connect
+
 local_enable=YES
+# Allow local system users to log in via FTP
+
 write_enable=YES
+# Permit users to upload, delete, and modify files
+
 chroot_local_user=YES
+# Jail local users in their home directories for security
+
 allow_writeable_chroot=YES
+# Allow writing inside chrooted directories
+
 pam_service_name=vsftpd
+# Specify the PAM service name for authentication
