Complete Inception setup with all Docker services

--- a/Project/srcs/.env
+++ b/Project/srcs/.env
@@ -1,3 +1,8 @@
+# ⚠️ WARNING: This is an example .env file for educational purposes only.
+# ❌ Do NOT use real passwords, API keys, or secrets here.
+# ✅ Copy this file to create your own local .env with your real credentials.
+# 💡 Keep your .env file private and never push it to GitHub.
+
 # ------------------------
 # Nginx
 # ------------------------
